--- a/index.html
+++ b/index.html
@@ -191,6 +191,11 @@
           <div class="image-container">
             <img src="https://github-readme-streak-stats.herokuapp.com/?user=saginawj&theme=dark" alt="GitHub Streak Stats">
           </div>
+          <div class="image-container">
+            <img src="https://github-profile-trophy.vercel.app/?username=saginawj&&row=2&column=3&theme=chalk" alt="GitHub Trophy Stats">
+          </div>
+
+
         </div>
       </section><!-- End Github Section -->
 
