--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <a href="https://discord.gg/h5FkTNZy" class="discord"><i class="bx bxl-discord"></i></a>
         <a href="https://github.com/saginawj" class="github"><i class="bx bxl-github"></i></a>
         <a href="mailto:saginawj@gmail.com" class="email"><i class="bx bx-envelope"></i></a>
+        <a href="https://buymeacoffee.com/saginawjc" class="coffee"><i class="bx bx-coffee"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -230,9 +231,26 @@
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
+
+<!-- ======= Footer Section ======= -->
+
+
+<section id="bmc" class="bmc">
+  <div class="container">
+    <a href="https://www.buymeacoffee.com/saginawjc" 
+    target="_blank"><img 
+      src="https://cdn.buymeacoffee.com/buttons/v2/default-yellow.png" 
+      alt="Buy Me A Coffee" 
+      style="height: 60px !important;width: 217px !important;" ></a>
+  </div>
+</section><!-- End Footer Section -->
+
+
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
-</body>
+
+
+</body> 
 
 </html>
