--- a/index.html
+++ b/index.html
@@ -190,11 +190,15 @@
             <p>Live look at my GitHub stats</p>
           </div>
           <div class="image-container">
+            <img src="https://ghchart.rshah.org/FFA500/saginawj" alt="GitHub Contributions">
+          </div>
+          <div class="image-container">
             <img src="https://github-readme-streak-stats.herokuapp.com/?user=saginawj&theme=dark" alt="GitHub Streak Stats">
           </div>
           <div class="image-container">
             <img src="https://github-profile-trophy.vercel.app/?username=saginawj&&row=2&column=3&theme=chalk" alt="GitHub Trophy Stats">
           </div>
+          
 
 
         </div>
@@ -213,6 +217,7 @@
           <!-- <img src="assets/img/myVisitedPlaces.gif" class="img-fluid" alt=""> -->
           <img src="assets/img/been-map.jpg" class="img-fluid" alt="">
         </div>
+        
       </div>
     </section><!-- End Map Section -->
         <!-- End Resume Section -->
